# CutClaw

./: .env.example  .gitignore  app.py  local_run.py  pyproject.toml
docs/: uv.md
render/: render_video.py
src/: Reviewer.py  Screenwriter_scene_short.py  config.py  core.py
src/audio/: audio_caption_madmom.py  litellm_client.py  madmom_api.py
src/utils/: media_utils.py
src/video/deconstruction/: scene_analysis_video.py  video_caption.py
src/video/preprocess/: asr.py  video_utils.py
