[project]
name = "cutclaw"
version = "0.1.0"
description = "Music-synchronized intelligent long-video editing system."
readme = "readme.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "audioread>=3.0.1",
    "av>=12.0.0",
    "einops>=0.8.0",
    "ffmpeg-python>=0.2.0",
    "gradio>=4.44.0",
    "litellm>=1.60.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.4,<2.0",
    "opencv-python-headless>=4.9.0.80",
    "packaging>=24.0",
    "pillow>=10.3.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "scenedetect>=0.6.7.1,<0.7",
    "scikit-learn>=1.4.2",
    "scipy>=1.12.0",
    "sentence-transformers>=3.0.0,<6",
    "soundfile>=0.12.1",
    "streamlit>=1.36.0",
    "tenacity>=8.2.3",
    "torch>=2.4.0,<2.9.0",
    "torchvision>=0.19.0,<0.24.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
# Decord is faster, but PyPI wheels are unreliable on macOS/Apple Silicon.
# CutClaw falls back to PyAV when this extra is not installed.
decord = [
    "decord==0.6.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
]

local-asr = [
    "pywhispercpp>=1.3.0",
]

diarization = [
    "pyannote.audio>=3.3.0",
]

qwen = [
    "qwen-omni-utils>=0.0.8",
]

all = [
    "cutclaw[decord,local-asr,diarization,qwen]",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py312"
